#13 additions: 17. 1. change public class PaymentService { } 2. add public class PaymentMapperTest extends AbstractIntegrationTest { 3. add public class PaymentDtoTest extends AbstractDtoTest {